2002-11-16  Per Bothner  <per@bothner.com>

	* InvokeNamed.java:  New class, extends ProcedureN.
	* Makefile.am (java_sources):  Add InvokeNamed.java.

2002-11-15  Per Bothner  <per@bothner.com>

	* ClassMethods.java (checkName):  Use Symbol's getName, not toString.

2002-11-10  Per Bothner  <per@bothner.com>

	* Invoke.java (kind):  New otpions 's' is static methods only;  'S' is
	changed to static or non-static (as documented for invoke-static).
	(applyN, getMethods, inline):  Handle both 's' and 'S' kinds.
	(inline):  If kinds=='S' and there is a single definitely ok static
	method, prefer it over non-static methods.

2002-09-26  Per Bothner  <per@bothner.com>

	* ClassMemberConstraint.java (define):  Special handling for aliases,
	recognized by having the type gnu.mapping.Location.

2002-09-21  Per Bothner  <per@bothner.com>

	* SlotGet.java (compile):  If there is no reflect-class (mapbe because
	we're currently compiling it), don't try to get its lang-specific type.

	* Invoke.java (inline):  Don't inline 'make' for new non-existing type.

2002-08-16  Per Bothner  <per@bothner.com>

	* Invoke.java (inlineClassName):  Allow plain Type, not just
	ClassType.  This allows (as <int> exp) to be inlined better.

2002-08-07  Per Bothner  <per@bothner.com>

	* SlotSet.java (compile):  Handle cals whose 2nd arg is a Field or
	Method, as created when inlining (make <type> field: value).

2002-07-25  Per Bothner  <per@bothner.com>

	* SlotSet.java (returnSelf):  New field.
	(setFieldReturnObject):  New static final field.
	(apply3, compile, getReturnType):  Handle returnSelf.
	* Invoke.java:  No longer implement Inlineable.
	(compile, getReturnType):  Remove methods.
	(inline):  Enhance, using most of the old logic from compile.
	We can do better type propagation easier this way.

2002-07-21  Per Bothner  <per@bothner.com>

	* InstanceOf.java, Invoke.java, SlotGet.java, SlotSet.java,
	TypeSwitch.java (inline):  Update to take extra ExpWalker parameter.
