@@ -11,7 +11,6 @@ java_sources = \
   ClassMethods.java \
   InstanceOf.java \
   Invoke.java \
-  InvokeNamed.java \
   SlotGet.java \
   SlotSet.java \
   StaticGet.java \
